# Binocular_structured_light_system

./: CMakeLists.txt  Camera.cpp  Camera.h  README.md  main.cpp  types.h  utils.cpp  utils.h
calib_params/: leftCam.ini  params.txt  rightCam.ini
